[project]
name = "qualys-mcp-full"
version = "0.1.0"
description = "Model Context Protocol server for full Qualys portal management (VMDR, PC, WAS, Cloud Agent, Container Security, TotalCloud, Patch, CSAM, EASM, and more) across multiple Qualys consoles."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rijul Sharma" }]

dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "xmltodict>=0.13.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
]

[project.scripts]
qualys-mcp = "qualys_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qualys_mcp*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
